"Create websocket client class"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,16 @@ endif()
 
 find_package(Boost 1.78 REQUIRED COMPONENTS system)
 
-set(SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
+set(SOURCES 
+   "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp"
+   "${CMAKE_CURRENT_SOURCE_DIR}/src/websocket-client.cpp"
+   )
 
 add_executable(network-monitor ${SOURCES})
 
 target_compile_features(network-monitor PRIVATE cxx_std_17)
+
+target_include_directories(network-monitor PRIVATE include/)
 
 target_link_libraries(network-monitor PRIVATE Boost::Boost)
 
