Network Monitor is now a static library and test executable created.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,46 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(network-monitor)
 
 if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/conaninfo.txt)
     list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_BINARY_DIR}")
 endif()
 
+# NETWORK-MONITOR STATIC LIBRARY
+project(network-monitor)
+
 find_package(Boost 1.78 REQUIRED COMPONENTS system)
 
 set(SOURCES 
-   "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/websocket-client.cpp"
    )
+add_library(network-monitor STATIC ${SOURCES})
 
-add_executable(network-monitor ${SOURCES})
+target_compile_features(network-monitor PUBLIC cxx_std_17)
 
-target_compile_features(network-monitor PRIVATE cxx_std_17)
+target_include_directories(network-monitor PUBLIC include/)
 
-target_include_directories(network-monitor PRIVATE include/)
-
-target_link_libraries(network-monitor PRIVATE Boost::Boost)
+target_link_libraries(network-monitor PUBLIC Boost::Boost)
 
 if(MINGW)
-  target_link_libraries(network-monitor PRIVATE ws2_32)
+  target_link_libraries(network-monitor PUBLIC ws2_32)
+endif()
+
+# TEST PROGRAM FOR NETWORK-MONITOR
+project(network-monitor-test)
+
+set(TEST_SOURCES 
+   "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-client.cpp"
+   )
+
+add_executable(network-monitor-test ${TEST_SOURCES})
+
+target_compile_features(network-monitor-test PRIVATE cxx_std_17)
+
+target_include_directories(network-monitor-test PRIVATE include/)
+
+target_link_libraries(network-monitor-test PRIVATE network-monitor)
+
+target_link_libraries(network-monitor-test PRIVATE Boost::Boost)
+
+if(MINGW)
+  target_link_libraries(network-monitor-test PRIVATE ws2_32)
 endif()
