Add first unit test and OpenSSL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ project(network-monitor)
 
 find_package(Boost 1.78 REQUIRED COMPONENTS system)
 
+find_package(OpenSSL REQUIRED)
+
 set(SOURCES 
    "${CMAKE_CURRENT_SOURCE_DIR}/src/websocket-client.cpp"
    )
@@ -18,7 +20,9 @@ target_compile_features(network-monitor PUBLIC cxx_std_17)
 
 target_include_directories(network-monitor PUBLIC include/)
 
-target_link_libraries(network-monitor PUBLIC Boost::Boost)
+target_link_libraries(network-monitor PUBLIC 
+                      OpenSSL::OpenSSL
+                      Boost::Boost)
 
 if(MINGW)
   target_link_libraries(network-monitor PUBLIC ws2_32)
@@ -29,6 +33,7 @@ project(network-monitor-test)
 
 set(TEST_SOURCES 
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-client.cpp"
+   "${CMAKE_CURRENT_SOURCE_DIR}/tests/main.cpp"
    )
 
 add_executable(network-monitor-test ${TEST_SOURCES})
@@ -37,10 +42,21 @@ target_compile_features(network-monitor-test PRIVATE cxx_std_17)
 
 target_include_directories(network-monitor-test PRIVATE include/)
 
-target_link_libraries(network-monitor-test PRIVATE network-monitor)
-
-target_link_libraries(network-monitor-test PRIVATE Boost::Boost)
+target_link_libraries(network-monitor-test PRIVATE
+                      network-monitor
+                      Boost::Boost)
 
 if(MINGW)
   target_link_libraries(network-monitor-test PRIVATE ws2_32)
 endif()
+
+# Enable Testing
+enable_testing()
+
+add_test(
+  NAME network-monitor-test
+  COMMAND $<TARGET_FILE:network-monitor-test>
+)
+set_tests_properties(network-monitor-test PROPERTIES
+    PASS_REGULAR_EXPRESSION ".*No errors detected"
+)
