Add the WebSocketServer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ set(TEST_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/transport-network.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-client.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-client-mock.cpp"
+   "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-server.cpp"
    )
 
 add_executable(network-monitor-test ${TEST_SOURCES})
