Add the StompServer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/src/network-monitor.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/stomp-client.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/stomp-frame.cpp"
+   "${CMAKE_CURRENT_SOURCE_DIR}/src/stomp-server.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/transport-network.cpp"
    )
 
@@ -56,10 +57,12 @@ set(TEST_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/network-monitor.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/stomp-client.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/stomp-frame.cpp"
+   "${CMAKE_CURRENT_SOURCE_DIR}/tests/stomp-server.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/transport-network.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-client.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-client-mock.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-server.cpp"
+   "${CMAKE_CURRENT_SOURCE_DIR}/tests/websocket-server-mock.cpp"
    )
 
 add_executable(network-monitor-test ${TEST_SOURCES})
