--- a/.github/workflows/cpp_build.yml
+++ b/.github/workflows/cpp_build.yml
@@ -26,7 +26,7 @@ jobs:
       working-directory: ./build
 
     - name: Build Project
-      run: cmake --build .
+      run: cmake --build . --parallel $(nproc)
       working-directory: ./build
 
     - name: Run Tests
