--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,8 +71,8 @@ target_compile_features(network-monitor-test PRIVATE cxx_std_17)
 
 target_compile_definitions(network-monitor-test 
                           PRIVATE
-                            LTNM_USERNAME="naurozehoath@gmail.com"
-                            LTNM_PASSWORD="9ba4efcec11a271f9021a461a8018c9fa8bfc33c"
+                            MNM_USERNAME="valid_user"
+                            MNM_PASSWORD="valid_password"
                             TEST_DATA="${CMAKE_CURRENT_SOURCE_DIR}/tests/test-data" 
                             TESTS_CACERT_PEM="${CMAKE_CURRENT_SOURCE_DIR}/tests/cacert.pem"
                             TESTS_NETWORK_LAYOUT_JSON="${CMAKE_CURRENT_SOURCE_DIR}/tests/network-layout.json")
@@ -112,8 +112,8 @@ target_compile_features(network-monitor-exe
 )
 target_compile_definitions(network-monitor-exe
     PRIVATE
-        LTNM_USERNAME="naurozehoath@gmail.com"
-        LTNM_PASSWORD="9ba4efcec11a271f9021a461a8018c9fa8bfc33c"
+        MNM_USERNAME="valid_user"
+        MNM_PASSWORD="valid_password"
         TESTS_CACERT_PEM="${CMAKE_CURRENT_SOURCE_DIR}/tests/cacert.pem"
         $<$<PLATFORM_ID:Windows>:_WIN32_WINNT=${WINDOWS_VERSION}>
 )
@@ -134,10 +134,10 @@ add_test(
 # These options define the pass/fail condition for the test.
 set_tests_properties(network-monitor-exe-tests PROPERTIES
     # This affects the duration of the io_context::run function.
-    ENVIRONMENT "LTNM_TIMEOUT_MS=5000"
+    ENVIRONMENT "MNM_TIMEOUT_MS=5000"
 
     # We introduce a timeout just to be safe.
-    # This should be longer than LTNM_TIMEOUT_MS.
+    # This should be longer than MNM_TIMEOUT_MS.
     TIMEOUT 10
 
     # We verify the content of the program log output. Any error message is a
@@ -159,8 +159,8 @@ target_compile_features(test-client-exe
 )
 target_compile_definitions(test-client-exe
     PRIVATE
-        LTNM_USERNAME="naurozehoath@gmail.com"
-        LTNM_PASSWORD="9ba4efcec11a271f9021a461a8018c9fa8bfc33c"
+        MNM_USERNAME="valid_user"
+        MNM_PASSWORD="valid_password"
         TESTS_CACERT_PEM="${CMAKE_CURRENT_SOURCE_DIR}/tests/cacert.pem"
         $<$<PLATFORM_ID:Windows>:_WIN32_WINNT=${WINDOWS_VERSION}>
 )
@@ -186,10 +186,10 @@ add_test(
 # These options define the pass/fail condition for the test.
 set_tests_properties(integration-test PROPERTIES
     # This affects the duration of the io_context::run function.
-    ENVIRONMENT "LTNM_TIMEOUT_MS=20000"
+    ENVIRONMENT "MNM_TIMEOUT_MS=20000"
 
     # We introduce a timeout just to be safe.
-    # This should be longer than LTNM_TIMEOUT_MS.
+    # This should be longer than MNM_TIMEOUT_MS.
     TIMEOUT 30
 
     # We verify the content of the program log output. Any error message is a
@@ -202,8 +202,8 @@ add_executable(playground-client "${CMAKE_CURRENT_SOURCE_DIR}/playground/playgro
 
 target_compile_definitions(playground-client
     PRIVATE
-        LTNM_USERNAME="naurozehoath@gmail.com"
-        LTNM_PASSWORD="9ba4efcec11a271f9021a461a8018c9fa8bfc33c"
+        MNM_USERNAME="valid_user"
+        MNM_PASSWORD="valid_password"
         TESTS_CACERT_PEM="${CMAKE_CURRENT_SOURCE_DIR}/tests/cacert.pem"
         TEST_DATA="${CMAKE_CURRENT_SOURCE_DIR}/tests/test-data" 
 )
@@ -220,32 +220,13 @@ add_executable(playground-network-monitor "${CMAKE_CURRENT_SOURCE_DIR}/playgroun
 
 target_compile_definitions(playground-network-monitor
     PRIVATE
-        LTNM_USERNAME="naurozehoath@gmail.com"
-        LTNM_PASSWORD="9ba4efcec11a271f9021a461a8018c9fa8bfc33c"
+        MNM_USERNAME="valid_user"
+        MNM_PASSWORD="valid_password"
         TESTS_CACERT_PEM="${CMAKE_CURRENT_SOURCE_DIR}/tests/cacert.pem"
         TEST_DATA="${CMAKE_CURRENT_SOURCE_DIR}/tests/test-data" 
 )
 
 target_link_libraries(playground-network-monitor
-    PRIVATE
-        network-monitor
-        nlohmann_json::nlohmann_json
-        OpenSSL::OpenSSL
-        spdlog::spdlog
-)
-
-add_executable(network-monitor-2routes "${CMAKE_CURRENT_SOURCE_DIR}/playground/network-monitor-2routes.cpp")
-
-target_compile_definitions(network-monitor-2routes
-    PRIVATE
-        LTNM_USERNAME="naurozehoath@gmail.com"
-        LTNM_PASSWORD="9ba4efcec11a271f9021a461a8018c9fa8bfc33c"
-        TESTS_CACERT_PEM="${CMAKE_CURRENT_SOURCE_DIR}/tests/cacert.pem"
-        TEST_DATA="${CMAKE_CURRENT_SOURCE_DIR}/tests/test-data"
-        PLAYGROUND_LAYOUT_FILE="${CMAKE_CURRENT_SOURCE_DIR}/playground/network_fastest_path_2routes.json" 
-)
-
-target_link_libraries(network-monitor-2routes
     PRIVATE
         network-monitor
         nlohmann_json::nlohmann_json
